--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^10.0.10",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.3.1",
+    "apollo-link-ws": "^1.0.17",
     "dompurify": "^1.0.10",
     "emotion-theming": "^10.0.10",
     "express": "4.16.4",
@@ -44,8 +45,10 @@
     "react-intl": "^2.8.0",
     "react-portal": "^4.2.0",
     "react-simplemde-editor": "^4.0.1",
+    "react-waypoint": "^9.0.2",
     "sequelize": "^5.3.2",
     "styled-system": "^4.1.0",
+    "subscriptions-transport-ws": "^0.9.16",
     "unstated": "^2.1.1"
   },
   "devDependencies": {
