--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "react-dom": "^16.8.6",
     "react-intl": "^2.8.0",
     "react-portal": "^4.2.0",
+    "react-redux": "^7.0.3",
     "react-simplemde-editor": "^4.0.1",
     "react-waypoint": "^9.0.2",
+    "redux": "^4.0.1",
     "sequelize": "^5.3.2",
     "styled-system": "^4.1.0",
-    "subscriptions-transport-ws": "^0.9.16",
-    "unstated": "^2.1.1"
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "babel-plugin-react-intl": "^3.0.1",
