Add default values to db, with cleanup

--- a/migrations/1558759202532_add_function_star_count_ranking.down.yaml
+++ b/migrations/1558759202532_add_function_star_count_ranking.down.yaml
@@ -1,1 +1,8 @@
-[]
+- args:
+    name: star_count_ranking
+    schema: public
+  type: untrack_function
+- args:
+    sql: |-
+      DROP FUNCTION public.star_count_ranking
+  type: run_sql
