--- a/migrations/1558759382080_add_function_star_sum_ranking.down.yaml
+++ b/migrations/1558759382080_add_function_star_sum_ranking.down.yaml
@@ -1,1 +1,8 @@
-[]
+- args:
+    name: star_sum_ranking
+    schema: public
+  type: untrack_function
+- args:
+    sql: |-
+      DROP FUNCTION public.star_sum_ranking
+  type: run_sql
