--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "markdown-it": "^8.4.2",
     "markdown-it-emoji": "^1.4.0",
     "next": "^8.0.4",
+    "next-routes": "^1.4.2",
     "pg": "^7.9.0",
     "rasha": "^1.2.5",
     "react": "^16.8.6",
@@ -48,6 +49,7 @@
     "react-simplemde-editor": "^4.0.1",
     "react-waypoint": "^9.0.2",
     "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
     "sequelize": "^5.3.2",
     "styled-system": "^4.1.0",
     "subscriptions-transport-ws": "^0.9.16"
