--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "intl": "^1.2.5",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "kuromoji": "^0.1.2",
     "markdown-it": "^8.4.2",
     "markdown-it-emoji": "^1.4.0",
     "next": "^8.0.4",
@@ -51,6 +52,7 @@
     "react-waypoint": "^9.0.2",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
+    "reselect": "^4.0.0",
     "sequelize": "^5.3.2",
     "styled-system": "^4.1.0",
     "subscriptions-transport-ws": "^0.9.16"
