--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.3.1",
     "apollo-link-ws": "^1.0.17",
+    "apollo-server-core": "^2.6.1",
+    "apollo-server-express": "^2.6.1",
+    "body-parser": "^1.19.0",
     "dompurify": "^1.0.10",
     "emotion-theming": "^10.0.10",
     "express": "4.16.4",
     "fnv-plus": "^1.2.12",
     "graphql": "^14.2.1",
+    "graphql-redis-subscriptions": "^2.1.0",
+    "graphql-subscriptions": "^1.1.0",
     "hoist-non-react-statics": "^3.3.0",
     "intl": "^1.2.5",
     "isomorphic-unfetch": "^3.0.0",
