--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "hoist-non-react-statics": "^3.3.0",
     "intl": "^1.2.5",
     "isomorphic-unfetch": "^3.0.0",
+    "jsdom": "^15.1.1",
     "jsonwebtoken": "^8.5.1",
     "kuromoji": "^0.1.2",
     "markdown-it": "^8.4.2",
