Add slatejs based editor, with storybook.
commit c4abc40fc17023a7a41016ca62716b1500bd771f
Author: heyrict <xiezh0831@126.com>
Date:   Wed Jun 12 09:04:53 2019 +0800

    Add add puzzle related mutation

commit 6589c03451a8dfe164a5aa4bbf3544567e6d6204
Author: heyrict <xiezh0831@126.com>
Date:   Tue Jun 11 21:07:00 2019 +0800

    Add add puzzle page

commit 804eaa89781a657fdd016fcee8b6a846f25a8c58
Author: heyrict <xiezh0831@126.com>
Date:   Tue Jun 11 19:19:48 2019 +0800

    Minor fixes for PreviewEditor

commit a9a31a21a662b19578918c6be78f9fd00bb4acb8
Author: heyrict <xiezh0831@126.com>
Date:   Tue Jun 11 16:52:21 2019 +0800

    Add simple editor

commit 6cfbdb71f532854034594eebd940154afc432c42
Author: heyrict <xiezh0831@126.com>
Date:   Tue Jun 11 12:30:36 2019 +0800

    Minor modifications of preview editor

commit 0fcb3e4c4c6e34baff8a586364a94caab1d51369
Author: heyrict <xiezh0831@126.com>
Date:   Tue Jun 11 11:57:22 2019 +0800

    Add stamps to preview editor

commit 64309f1c3fa6906c4193eb40472bbb942765d492
Author: heyrict <xiezh0831@126.com>
Date:   Tue Jun 11 09:07:39 2019 +0800

    Split PuzzleDialogues, add dialogue stories

commit 9d071e5e602c3e99d2b7ccc4c3aed38403d281b5
Author: heyrict <xiezh0831@126.com>
Date:   Mon Jun 10 21:54:22 2019 +0800

    Add Storybooks for Editors

commit 0b26c70ddf7511ee6305e2d58ee2cd0221842dc0
Author: heyrict <xiezh0831@126.com>
Date:   Mon Jun 10 13:24:30 2019 +0800

    Add prismjs based markdown support

commit 1ccd8d18d80852f3448e6ff30916d5853936bf1d
Author: heyrict <xiezh0831@126.com>
Date:   Mon Jun 10 10:03:04 2019 +0800

    Add storybook

commit 57d9a2176b82e5900d922e41eca6c210b1331281
Author: heyrict <xiezh0831@126.com>
Date:   Sun Jun 9 21:22:33 2019 +0800

    Add statejs preview editor

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ node_modules
 build
 stats.json
 schema.json
+internal/hasura/schema.graphql
+internal/hasura/typeDefs.js
+storybook-static
 *.log
 # Nextjs build output
 dist
