--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "build": "next build",
     "start": "NODE_ENV=production node server",
     "extract-intl": "NODE_ENV=development node scripts/extract-intl.js",
+    "export-schema": "gq http://localhost:8080/v1/graphql -H 'X-Hasura-Admin-Secret: CINDYTHINK_HASURA_ADMIN_SECRET' --introspect > internal/hasura/schema.graphql; echo \"const typeDefs=\\``cat internal/hasura/schema.graphql`\\`;\nexport default typeDefs;\" > internal/hasura/typeDefs.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "storybook": "start-storybook -s . -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@emotion/core": "^10.0.10",
@@ -37,6 +40,7 @@
     "graphql-redis-subscriptions": "^2.1.0",
     "graphql-subscriptions": "^1.1.0",
     "hoist-non-react-statics": "^3.3.0",
+    "immutable": "^4.0.0-rc.12",
     "intl": "^1.2.5",
     "isomorphic-unfetch": "^3.0.0",
     "jsdom": "^15.1.1",
@@ -47,6 +51,7 @@
     "next": "^8.0.4",
     "next-routes": "^1.4.2",
     "pg": "^7.9.0",
+    "prismjs": "^1.16.0",
     "rasha": "^1.2.5",
     "react": "^16.8.6",
     "react-apollo": "^2.5.4",
@@ -54,18 +59,26 @@
     "react-dom": "^16.8.6",
     "react-fast-compare": "^2.0.4",
     "react-intl": "^2.8.0",
+    "react-popper": "^1.3.3",
     "react-portal": "^4.2.0",
     "react-redux": "^7.0.3",
-    "react-simplemde-editor": "^4.0.1",
     "react-waypoint": "^9.0.2",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
     "sequelize": "^5.3.2",
+    "slate": "^0.47.4",
+    "slate-react": "^0.22.4",
     "styled-system": "^5.0.5",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@storybook/addon-actions": "^5.1.3",
+    "@storybook/addon-links": "^5.1.3",
+    "@storybook/addons": "^5.1.3",
+    "@storybook/react": "^5.1.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-react-intl": "^3.0.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.2",
