--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
-    "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.3.1",
     "apollo-link-ws": "^1.0.17",
     "apollo-server-core": "^2.6.1",
@@ -78,12 +77,24 @@
     "@storybook/addon-links": "^5.1.3",
     "@storybook/addons": "^5.1.3",
     "@storybook/react": "^5.1.3",
+    "@types/enzyme": "^3.9.3",
+    "@types/jest": "^24.0.13",
+    "@types/next": "^8.0.5",
+    "@types/node": "^12.0.8",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-intl": "^2.3.18",
+    "@types/react-redux": "^7.0.9",
+    "@types/styled-system": "^4.2.1",
+    "@zeit/next-typescript": "^1.1.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-intl": "^3.0.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.2",
     "jest": "^24.8.0",
     "prettier": "^1.16.4",
-    "svg-url-loader": "^2.3.2"
+    "svg-url-loader": "^2.3.2",
+    "tslint": "^5.17.0",
+    "typescript": "^3.5.1"
   }
 }
