Plenty of rewriting work
- Rewrite most components with typescript
- Add apollo config to extract graphql schema to typescript
- Make trigger based subscription server schema consistent with hasura
- Rename graphql operation names to prevent collision with their types
- Remove tslint, use tsserver for linting
- Add missing translation files

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@ node_modules
 build
 stats.json
 schema.json
-internal/hasura/schema.graphql
-internal/hasura/typeDefs.js
+generated
 storybook-static
 *.log
 # Nextjs build output
