--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@storybook/react": "^5.1.3",
     "@types/enzyme": "^3.9.3",
     "@types/jest": "^24.0.13",
+    "@types/kuromoji": "^0.1.0",
     "@types/next": "^8.0.5",
     "@types/node": "^12.0.8",
     "@types/react": "^16.8.19",
