--- a/migrations/1560846275359_create_add_qno_trigger.up.yaml
+++ b/migrations/1560846275359_create_add_qno_trigger.up.yaml
@@ -13,7 +13,7 @@
       $$ language 'plpgsql';
 
       create trigger add_dialogue_qno_before_dialogue_insert_trigger before insert
-      on public.sui_hei_puzzle
+      on public.sui_hei_dialogue
       for each row
       execute procedure add_dialogue_qno_before_dialogue_insert();
   type: run_sql
