--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-popper": "^1.3.3",
     "react-portal": "^4.2.0",
     "react-redux": "^7.1.0",
+    "react-toastify": "^5.3.1",
     "react-waypoint": "^9.0.2",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
