--- a/migrations/1562891066943_create_table_public_sui_hei_tag.down.yaml
+++ b/migrations/1562891066943_create_table_public_sui_hei_tag.down.yaml
@@ -1,3 +1,11 @@
+# Drop triggers
+- args:
+    cascade: false
+    sql: |-
+      DROP TRIGGER IF EXISTS maybe_delete_tag_after_puzzle_tag_delete_trigger ON sui_hei_puzzle;
+      DROP FUNCTION IF EXISTS maybe_delete_tag_after_tag_delete;
+  type: run_sql
+
 # Drop permissions
 - args:
     role: anonymous
@@ -41,6 +49,12 @@
       name: sui_hei_tag
       schema: public
   type: drop_insert_permission
+- args:
+    role: user
+    table:
+      name: sui_hei_tag
+      schema: public
+  type: drop_update_permission
 
 # Drop relationships
 - args:
@@ -80,12 +94,4 @@
   type: run_sql
 - args:
     sql: DROP TABLE "public"."sui_hei_tag"
-  type: run_sql
-
-# Drop triggers
-- args:
-    cascade: false
-    sql: |-
-      DROP TRIGGER IF EXISTS maybe_delete_tag_after_puzzle_tag_delete_trigger ON sui_hei_puzzle;
-      DROP FUNCTION IF EXISTS maybe_delete_tag_after_tag_delete;
   type: run_sql
