Update package versions, with many rewriting work.
- Update next.js to v9, drop next-routes dependency.
- Fix all type errors in code base.
- Separate apollo server with next server.
- Add auto-reload to server based on nodemon.
- Update README.md

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,11 @@
     "baseUrl": ".",
     "checkJs": false,
     "esModuleInterop": true,
-    "jsx": "react",
-    "lib": ["dom", "es2017"],
+    "jsx": "preserve",
+    "lib": [
+      "dom",
+      "es2017"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -16,7 +19,9 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true
   },
   "exclude": [
     ".next",
@@ -31,5 +36,10 @@
     "routes.js",
     "static",
     "storybook-static"
+  ],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
   ]
 }
