--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev:apollo": "NODE_ENV=development nodemon --watch server --exec babel-node server/apolloServer.js",
     "dev:next": "NODE_ENV=development babel-node server/nextServer.js",
     "build:client": "NODE_ENV=production next build",
-    "build:server": "NODE_ENV=production babel -d .next/dist settings.js routes.js; NODE_ENV=production babel server -d .next/dist/server",
+    "build:server": "NODE_ENV=production babel -d .next/dist settings.js; NODE_ENV=production babel server -d .next/dist/server",
     "build": "yarn run build:client; yarn run build:server",
     "start:apollo": "NODE_ENV=production node .next/dist/server/apolloServer.js",
     "start:next": "NODE_ENV=production node .next/dist/server/nextServer.js",
@@ -105,6 +105,7 @@
     "@types/styled-system": "^5.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-intl": "^3.0.1",
+    "cors": "^2.8.5",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.2",
     "jest": "^24.8.0",
