--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@types/react-intl": "^2.3.18",
     "@types/react-portal": "^4.0.2",
     "@types/react-redux": "^7.1.0",
+    "@types/react-select": "^3.0.0",
     "@types/slate": "^0.44.12",
     "@types/storybook__react": "^4.0.2",
     "@types/styled-system": "^5.0.0",
