Add no watch option to server

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cindy-next",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "packaging site for lateral thinking",
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
   "license": "MIT",
   "scripts": {
     "dev:apollo": "NODE_ENV=development nodemon --watch server --exec babel-node server/apolloServer.js",
+    "dev:apollo:nowatch": "NODE_ENV=development babel-node server/apolloServer.js",
     "dev:next": "NODE_ENV=development babel-node server/nextServer.js",
     "build:client": "NODE_ENV=production next build",
     "build:server": "NODE_ENV=production babel -d .next/dist settings.js; NODE_ENV=production babel server -d .next/dist/server",
