--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "sequelize": "^5.3.2",
     "slate": "^0.47.4",
     "slate-react": "^0.22.4",
+    "smoothscroll-polyfill": "^0.4.4",
     "styled-system": "^5.0.5",
     "subscriptions-transport-ws": "^0.9.16"
   },
