Update patrons, change apollo server scripts

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "author": "heyrict<github.com/heyrict>",
   "license": "MIT",
   "scripts": {
-    "dev:apollo": "NODE_ENV=development nodemon --watch server --exec babel-node server/apolloServer.js",
-    "dev:apollo:nowatch": "NODE_ENV=development babel-node server/apolloServer.js",
+    "dev:apollo": "NODE_ENV=development babel-node server/apolloServer.js",
+    "dev:apollo:watch": "NODE_ENV=development nodemon --watch server --exec babel-node server/apolloServer.js",
     "dev:next": "NODE_ENV=development babel-node server/nextServer.js",
     "build:client": "NODE_ENV=production next build",
     "build:server": "NODE_ENV=production babel -d .next/dist settings.js; NODE_ENV=production babel server -d .next/dist/server",
