--- a/config/service/cindy-next-next.service
+++ b/config/service/cindy-next-next.service
@@ -7,7 +7,7 @@ User=heyrict
 Group=www-data
 WorkingDirectory=/path/to/cindy-next
 Environment=NODE_ENV=production
-ExecStart=/path/to/node /path/to/cindy-next/.next/dist/server/nextServer.js
+ExecStart=/path/to/node /path/to/cindy-next/node_modules/.bin/next start
 Restart=always
 
 [Install]
