--- a/package.json
+++ b/package.json
@@ -90,10 +90,12 @@
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
     "@types/cookie": "^0.3.3",
+    "@types/dompurify": "^0.0.33",
     "@types/enzyme": "^3.9.3",
     "@types/intl": "^1.2.0",
     "@types/jest": "^24.0.13",
     "@types/kuromoji": "^0.1.0",
+    "@types/markdown-it": "^0.0.8",
     "@types/next": "^8.0.5",
     "@types/node": "^12.0.8",
     "@types/react": "^16.8.19",
