Remove /webhook/getcurrent, use jwt decoding

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "heyrict<github.com/heyrict>",
   "license": "MIT",
   "scripts": {
-    "dev:apollo": "NODE_ENV=development babel-node server/apolloServer.js",
+    "dev:apollo": "NODE_ENV=development babel-node --extensions .js,.ts server/apolloServer.js",
     "dev:apollo:watch": "NODE_ENV=development nodemon --watch server --exec babel-node server/apolloServer.js",
     "dev:next": "NODE_ENV=development next",
     "prettify": "prettier --write '**/*.js' '**/*.tsx' '**/*.ts'",
@@ -94,10 +94,12 @@
     "@types/enzyme": "^3.9.3",
     "@types/intl": "^1.2.0",
     "@types/jest": "^24.0.13",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/kuromoji": "^0.1.0",
     "@types/markdown-it": "^0.0.8",
     "@types/next": "^8.0.5",
     "@types/node": "^12.0.8",
+    "@types/rasha": "^1.2.0",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-intl": "^2.3.18",
