--- a/config/service/cindy-next-python-callback.service
+++ b/config/service/cindy-next-python-callback.service
@@ -12,6 +12,7 @@ Environment=NUM_WORKERS=2
 #Environment=TOKEN_SECRET=
 #Environment=CONSUMER_KEY=
 #Environment=CONSUMER_SECRET=
+Environment=ANONYMOUS_USER_DISPLAY=謎の料理人
 Environment=TWEET_WITH_PICTURE=True
 ExecStart=/path/to/python /path/to/cindy-next/python/callbackServer.py
 Restart=always
