--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
+    "@formatjs/intl-pluralrules": "^1.3.0",
+    "@formatjs/intl-relativetimeformat": "^4.2.0",
     "apollo-boost": "^0.3.1",
     "apollo-link-ws": "^1.0.17",
     "apollo-server-core": "^2.6.1",
@@ -65,7 +67,7 @@
     "react-d3-tree": "^1.13.0",
     "react-dom": "^16.8.6",
     "react-fast-compare": "^2.0.4",
-    "react-intl": "^2.8.0",
+    "react-intl": "~3.3",
     "react-popper": "^1.3.3",
     "react-portal": "^4.2.0",
     "react-redux": "^7.1.0",
@@ -102,7 +104,6 @@
     "@types/rasha": "^1.2.0",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
-    "@types/react-intl": "^2.3.18",
     "@types/react-portal": "^4.0.2",
     "@types/react-redux": "^7.1.0",
     "@types/react-select": "^3.0.0",
