Fixups for package version upgrading

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "dev:next": "NODE_ENV=development next",
     "prettify": "prettier --write '**/*.js' '**/*.tsx' '**/*.ts'",
     "build:client": "NODE_ENV=production next build",
-    "build:server": "NODE_ENV=production babel --extensions .js,.ts -d .next/dist settings.js globalTypes.ts; NODE_ENV=production babel --extensions .js,.ts server -d .next/dist/server",
+    "build:server": "NODE_ENV=production babel --extensions .js,.ts -d .next/dist settings.ts globalTypes.ts; NODE_ENV=production babel --extensions .js,.ts server -d .next/dist/server; cp patrons.json .next/dist",
     "build": "yarn run build:client; yarn run build:server",
     "start:apollo": "NODE_ENV=production node .next/dist/server/apolloServer.js",
-    "start:next": "NODE_ENV=production node .next/dist/server/nextServer.js",
+    "start:next": "NODE_ENV=production next start",
     "extract-intl": "NODE_ENV=development node scripts/extract-intl.js",
     "export-schema": "gq http://localhost:8080/v1/graphql -H \"X-Hasura-Admin-Secret: $HASURA_GRAPHQL_ADMIN_SECRET\" --introspect > generated/schema.graphql; echo \"const typeDefs=\\``cat generated/schema.graphql`\\`;\nexport default typeDefs;\" > generated/typeDefs.js",
     "export-graphql-types": "yarn run export-graphql-types:subscription; yarn run export-graphql-types:hasura;",
@@ -38,7 +38,7 @@
     "@emotion/styled": "^10.0.10",
     "@formatjs/intl-pluralrules": "^1.3.0",
     "@formatjs/intl-relativetimeformat": "^4.2.0",
-    "apollo-boost": "^0.3.1",
+    "apollo-boost": "^0.4.1",
     "apollo-link-ws": "^1.0.17",
     "apollo-server-core": "^2.6.1",
     "apollo-server-express": "^2.6.1",
