--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@formatjs/intl-pluralrules": "^1.3.0",
