--- a/package.json
+++ b/package.json
@@ -34,12 +34,18 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@apollo/react-common": "^3.1.3",
+    "@apollo/react-components": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-ssr": "^3.1.3",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@formatjs/intl-pluralrules": "^1.3.0",
     "@formatjs/intl-relativetimeformat": "^4.2.0",
-    "apollo-boost": "^0.4.1",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.17",
     "apollo-server-core": "^2.6.1",
     "apollo-server-express": "^2.6.1",
@@ -64,7 +70,6 @@
     "prismjs": "^1.16.0",
     "rasha": "^1.2.5",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.4",
     "react-d3-tree": "^1.13.0",
     "react-dom": "^16.8.6",
     "react-fast-compare": "^2.0.4",
