--- a/migrations/1585901097977_create_tables_replay/up.yaml
+++ b/migrations/1585901097977_create_tables_replay/up.yaml
@@ -40,11 +40,12 @@
     permission:
       allow_aggregations: true
       columns:
-      - id
-      - title
-      - puzzle_id
-      - user_id
-      - created
+        - id
+        - title
+        - milestones
+        - puzzle_id
+        - user_id
+        - created
       filter: {}
       limit: null
     role: anonymous
@@ -59,13 +60,14 @@
         user_id:
           _eq: X-Hasura-User-Id
       columns:
-      - id
-      - puzzle_id
-      - title
-      - user_id
+        - id
+        - puzzle_id
+        - milestones
+        - title
+        - user_id
       localPresets:
-      - key: ""
-        value: ""
+        - key: ''
+          value: ''
       set: {}
     role: user
     table:
@@ -76,11 +78,12 @@
     permission:
       allow_aggregations: false
       columns:
-      - id
-      - puzzle_id
-      - user_id
-      - created
-      - title
+        - id
+        - puzzle_id
+        - milestones
+        - user_id
+        - created
+        - title
       filter: {}
       limit: null
     role: user
@@ -91,16 +94,17 @@
 - args:
     permission:
       columns:
-      - id
-      - puzzle_id
-      - title
-      - user_id
+        - id
+        - puzzle_id
+        - title
+        - milestones
+        - user_id
       filter:
         user_id:
           _eq: X-Hasura-User-Id
       localPresets:
-      - key: ""
-        value: ""
+        - key: ''
+          value: ''
       set: {}
     role: user
     table:
@@ -111,15 +115,15 @@
     permission:
       allow_aggregations: false
       columns:
-      - id
-      - replay_id
-      - question
-      - answer
-      - good
-      - "true"
-      - keywords
-      - milestones
-      - dependency
+        - id
+        - replay_id
+        - question
+        - answer
+        - good
+        - 'true'
+        - keywords
+        - milestones
+        - dependency
       filter: {}
       limit: null
     role: anonymous
@@ -131,15 +135,15 @@
     permission:
       allow_aggregations: false
       columns:
-      - good
-      - "true"
-      - id
-      - replay_id
-      - keywords
-      - answer
-      - dependency
-      - milestones
-      - question
+        - good
+        - 'true'
+        - id
+        - replay_id
+        - keywords
+        - answer
+        - dependency
+        - milestones
+        - question
       filter: {}
       limit: null
     role: user
@@ -163,18 +167,18 @@
           user_id:
             _eq: X-Hasura-User-Id
       columns:
-      - id
-      - replay_id
-      - question
-      - answer
-      - good
-      - "true"
-      - keywords
-      - milestones
-      - dependency
+        - id
+        - replay_id
+        - question
+        - answer
+        - good
+        - 'true'
+        - keywords
+        - milestones
+        - dependency
       localPresets:
-      - key: ""
-        value: ""
+        - key: ''
+          value: ''
       set: {}
     role: user
     table:
@@ -184,22 +188,22 @@
 - args:
     permission:
       columns:
-      - good
-      - "true"
-      - id
-      - replay_id
-      - keywords
-      - answer
-      - dependency
-      - milestones
-      - question
+        - good
+        - 'true'
+        - id
+        - replay_id
+        - keywords
+        - answer
+        - dependency
+        - milestones
+        - question
       filter:
         sui_hei_replay:
           user_id:
             _eq: X-Hasura-User-Id
       localPresets:
-      - key: ""
-        value: ""
+        - key: ''
+          value: ''
       set: {}
     role: user
     table:
