--- a/migrations/1585980923388_create_tables_replay/up.yaml
+++ b/migrations/1585980923388_create_tables_replay/up.yaml
@@ -40,12 +40,12 @@
     permission:
       allow_aggregations: true
       columns:
-        - id
-        - title
-        - milestones
-        - puzzle_id
-        - user_id
-        - created
+      - id
+      - title
+      - milestones
+      - puzzle_id
+      - user_id
+      - created
       filter: {}
       limit: null
     role: anonymous
@@ -55,35 +55,14 @@
   type: create_select_permission
 - args:
     permission:
-      allow_upsert: true
-      check:
-        user_id:
-          _eq: X-Hasura-User-Id
-      columns:
-        - id
-        - puzzle_id
-        - milestones
-        - title
-        - user_id
-      localPresets:
-        - key: ''
-          value: ''
-      set: {}
-    role: user
-    table:
-      name: sui_hei_replay
-      schema: public
-  type: create_insert_permission
-- args:
-    permission:
       allow_aggregations: false
       columns:
-        - id
-        - puzzle_id
-        - milestones
-        - user_id
-        - created
-        - title
+      - id
+      - puzzle_id
+      - milestones
+      - user_id
+      - created
+      - title
       filter: {}
       limit: null
     role: user
@@ -93,37 +72,17 @@
   type: create_select_permission
 - args:
     permission:
-      columns:
-        - id
-        - puzzle_id
-        - title
-        - milestones
-        - user_id
-      filter:
-        user_id:
-          _eq: X-Hasura-User-Id
-      localPresets:
-        - key: ''
-          value: ''
-      set: {}
-    role: user
-    table:
-      name: sui_hei_replay
-      schema: public
-  type: create_update_permission
-- args:
-    permission:
       allow_aggregations: false
       columns:
-        - id
-        - replay_id
-        - question
-        - answer
-        - good
-        - 'true'
-        - keywords
-        - milestones
-        - dependency
+      - id
+      - replay_id
+      - question
+      - answer
+      - good
+      - "true"
+      - keywords
+      - milestones
+      - dependency
       filter: {}
       limit: null
     role: anonymous
@@ -135,15 +94,15 @@
     permission:
       allow_aggregations: false
       columns:
-        - good
-        - 'true'
-        - id
-        - replay_id
-        - keywords
-        - answer
-        - dependency
-        - milestones
-        - question
+      - good
+      - "true"
+      - id
+      - replay_id
+      - keywords
+      - answer
+      - dependency
+      - milestones
+      - question
       filter: {}
       limit: null
     role: user
@@ -167,18 +126,18 @@
           user_id:
             _eq: X-Hasura-User-Id
       columns:
-        - id
-        - replay_id
-        - question
-        - answer
-        - good
-        - 'true'
-        - keywords
-        - milestones
-        - dependency
+      - id
+      - replay_id
+      - question
+      - answer
+      - good
+      - "true"
+      - keywords
+      - milestones
+      - dependency
       localPresets:
-        - key: ''
-          value: ''
+      - key: ""
+        value: ""
       set: {}
     role: user
     table:
@@ -188,22 +147,22 @@
 - args:
     permission:
       columns:
-        - good
-        - 'true'
-        - id
-        - replay_id
-        - keywords
-        - answer
-        - dependency
-        - milestones
-        - question
+      - good
+      - "true"
+      - id
+      - replay_id
+      - keywords
+      - answer
+      - dependency
+      - milestones
+      - question
       filter:
         sui_hei_replay:
           user_id:
             _eq: X-Hasura-User-Id
       localPresets:
-        - key: ''
-          value: ''
+      - key: ""
+        value: ""
       set: {}
     role: user
     table:
@@ -221,3 +180,49 @@
       name: sui_hei_replay_dialogue
       schema: public
   type: create_delete_permission
+- args:
+    permission:
+      check:
+        user_id:
+          _eq: X-Hasura-User-Id
+      columns:
+      - id
+      - puzzle_id
+      - milestones
+      - title
+      - user_id
+      localPresets:
+      - key: user_id
+        value: x-hasura-User-Id
+      - key: ""
+        value: ""
+      set:
+        user_id: x-hasura-User-Id
+    role: user
+    table:
+      name: sui_hei_replay
+      schema: public
+  type: create_insert_permission
+- args:
+    permission:
+      columns:
+      - id
+      - puzzle_id
+      - title
+      - milestones
+      - user_id
+      filter:
+        user_id:
+          _eq: X-Hasura-User-Id
+      localPresets:
+      - key: user_id
+        value: x-hasura-User-Id
+      - key: ""
+        value: ""
+      set:
+        user_id: x-hasura-User-Id
+    role: user
+    table:
+      name: sui_hei_replay
+      schema: public
+  type: create_update_permission
