--- a/package.json
+++ b/package.json
@@ -33,17 +33,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.6",
-    "@apollo/react-common": "^3.1.3",
-    "@apollo/react-components": "^3.1.3",
-    "@apollo/react-hooks": "^3.1.3",
-    "@apollo/react-ssr": "^3.1.3",
+    "@apollo/react-components": "^4.0.0",
+    "@apollo/react-ssr": "^4.0.0",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@formatjs/intl-pluralrules": "^1.3.0",
     "@formatjs/intl-relativetimeformat": "^4.2.0",
-    "apollo-link-ws": "^1.0.17",
+    "apollo-link-ws": "^1.0.20",
     "body-parser": "^1.19.0",
     "dompurify": "^2.0.7",
+    "dequal": "^2.0.2",
     "emotion-theming": "^10.0.10",
     "express": "4.16.4",
     "fnv-plus": "^1.2.12",
@@ -56,7 +55,7 @@
     "jsonwebtoken": "^8.5.1",
     "markdown-it": "^8.4.2",
     "markdown-it-emoji": "^1.4.0",
-    "next": "^9.0.1",
+    "next": "^10.0",
     "pg": "^7.9.0",
     "rasha": "^1.2.5",
     "react": "^16.8.6",
