--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/cookie": "^0.3.3",
     "@types/dompurify": "^0.0.33",
     "@types/enzyme": "^3.9.3",
+    "@types/express": "^4.17.9",
     "@types/intl": "^1.2.0",
     "@types/jest": "^24.0.13",
     "@types/jsonwebtoken": "^8.3.3",
