--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@formatjs/intl-pluralrules": "^1.3.0",
     "@formatjs/intl-relativetimeformat": "^4.2.0",
     "body-parser": "^1.19.0",
+    "deepmerge": "^4.2.2",
     "dompurify": "^2.0.7",
     "emotion-theming": "^10.0.10",
     "express": "4.16.4",
     "fnv-plus": "^1.2.12",
+    "graphql": "^15.4.0",
     "hoist-non-react-statics": "^3.3.0",
     "intl": "^1.2.5",
     "isomorphic-unfetch": "^3.0.0",
