fix: Fix subscriptions on puzzle and chat
, with the following bug fixed

- Fix datetime handling
- Fix editors on puzzle page
- Fix some notifications
- Upgrade to latest dependencies of react-intl

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@apollo/client": "^3.3.6",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
-    "@formatjs/intl-pluralrules": "^1.3.0",
-    "@formatjs/intl-relativetimeformat": "^4.2.0",
+    "@formatjs/intl-pluralrules": "^4.0.3",
+    "@formatjs/intl-relativetimeformat": "^8.0.3",
     "body-parser": "^1.19.0",
     "deepmerge": "^4.2.2",
     "dompurify": "^2.0.7",
@@ -58,7 +58,7 @@
     "react-d3-tree": "^1.13.0",
     "react-dom": "^16.8.6",
     "react-fast-compare": "^2.0.4",
-    "react-intl": "~3.3",
+    "react-intl": "^5.10",
     "react-popper": "^1.3.3",
     "react-portal": "^4.2.0",
     "react-redux": "^7.1.0",
