chore: Remove apollo server

--- a/package.json
+++ b/package.json
@@ -13,15 +13,10 @@
   "author": "heyrict<github.com/heyrict>",
   "license": "MIT",
   "scripts": {
-    "dev:apollo": "NODE_ENV=development babel-node --extensions .js,.ts server/apolloServer.js",
-    "dev:apollo:watch": "NODE_ENV=development nodemon --watch server --exec babel-node server/apolloServer.js",
-    "dev:next": "NODE_ENV=development next",
+    "dev": "NODE_ENV=development next",
     "prettify": "prettier --write '**/*.js' '**/*.tsx' '**/*.ts'",
-    "build:client": "NODE_ENV=production next build",
-    "build:server": "NODE_ENV=production babel --extensions .js,.ts -d .next/dist settings.ts globalTypes.ts; NODE_ENV=production babel --extensions .js,.ts server -d .next/dist/server; cp patrons.json .next/dist",
-    "build": "yarn run build:client; yarn run build:server",
-    "start:apollo": "NODE_ENV=production node .next/dist/server/apolloServer.js",
-    "start:next": "NODE_ENV=production next start",
+    "build": "NODE_ENV=production next build",
+    "start": "NODE_ENV=production next start",
     "extract-intl": "NODE_ENV=development babel-node --extensions .js,.ts scripts/extract-intl.js",
     "export-schema": "gq http://localhost:8000/graphql -H \"X-Cindy-Admin-Secret: $ADMIN_SECRET\" --introspect > generated/schema.graphql; echo \"const typeDefs=\\``cat generated/schema.graphql`\\`;\nexport default typeDefs;\" > generated/typeDefs.js",
     "export-graphql-types": "apollo codegen:generate -c ./apollo.config.js --target typescript generated",
