--- a/config/service/cindy-next-twitter.service
+++ b/config/service/cindy-next-twitter.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Cindy-next python callback server
+Description=Cindy-next twitter server
 After=network.target
 
 [Service]
@@ -14,7 +14,7 @@ Environment=NUM_WORKERS=2
 #Environment=CONSUMER_SECRET=
 Environment=ANONYMOUS_USER_DISPLAY=謎の料理人
 Environment=TWEET_WITH_PICTURE=True
-ExecStart=/path/to/python /path/to/cindy-next/python/callbackServer.py
+ExecStart=/path/to/python /path/to/cindy-next/python/twitterServer.py
 Restart=always
 
 [Install]
