--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@emotion/styled": "^10.0.10",
     "@formatjs/intl-pluralrules": "^4.0.3",
     "@formatjs/intl-relativetimeformat": "^8.0.3",
+    "@multiavatar/multiavatar": "^1.0.5",
     "body-parser": "^1.19.0",
     "deepmerge": "^4.2.2",
     "dompurify": "^2.0.7",
