--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@formatjs/intl-pluralrules": "^4.0.3",
     "@formatjs/intl-relativetimeformat": "^8.0.3",
     "@multiavatar/multiavatar": "^1.0.5",
+    "apollo-upload-client": "^17.0.0",
     "body-parser": "^1.19.0",
     "deepmerge": "^4.2.2",
     "dompurify": "^2.0.7",
