chore(deps): Upgrade next to v12.1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "strict": true,
     "target": "esnext",
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "incremental": true
   },
   "exclude": [
     ".next",
