--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "jsdom": "^15.1.1",
     "markdown-it": "^8.4.2",
     "markdown-it-emoji": "^1.4.0",
-    "next": "^11.1",
+    "next": "^12.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-fast-compare": "^2.0.4",
@@ -87,6 +87,7 @@
     "enzyme-adapter-react-16": "^1.13.2",
     "jest": "^24.8.0",
     "prettier": "^2.2.1",
+    "raw-loader": "^4.0.2",
     "svg-url-loader": "^2.3.2",
     "typescript": "^4.1.3"
   }
